# Call_QA_Summarisation_copy

./: AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  SYSTEM_ANALYSIS.md  config.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: main_call-qa-summarisation.yml  main_call_QA_summarisation.yml
data/: assessment_framework.json  new_proposal_template.txt  qa_agent_profiles.json
data/call_transcripts/: account_frozen_suspected_economic_crime.txt  adding_a_borrower_existing_mortgage.txt  card_swallowed_by_atm.txt  duplicate_transaction.txt  mortgage_application_update_status.txt  overdraft_increase.txt  payment_sent_to_wrong_account.txt  product_transfer_customer_wants_advice.txt  reporting_phishing_texts_emails.txt  requesting_capitalisation_of_arrears.txt  suspicious_activity_discussion.txt  temporary_credit_limit_increase.txt  verify_bank_contact_genuine.txt
pages/employee/: __init__.py  agent_coaching.py  call_summary.py  dashboard.py  support.py
prompts/: coaching_strategist.txt  gold_standard_generator.txt  qa_analyst.txt
src/call_summarisation/: __init__.py  prompts.py  schema.json  schema.py  summariser.py
src/config/: __init__.py  config_loader.py
src/utils/: template_loader.py
src/workflow/: graph_autonomous.py  graph_qa.py  state.py
utils/: __init__.py  components.py  graph_visualization.py  sidebar.py  styles.py
